BAC-3353: fix style of title collapse in sidebar

--- a/src/assets/styles/components/sidebar.scss
+++ b/src/assets/styles/components/sidebar.scss
@@ -24,7 +24,7 @@
           &-title {
             padding-left: 0;
             padding-right: 0;
-            font-weight: 600;
+            font-weight: 500;
             font-size: 1rem;
             color: rgba(var(--v-theme-grey-900), var(--v-body-opacity));
             .v-expansion-panel-title__icon {
